working on fixing vertical gaps in masonry

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -208,36 +208,23 @@ Draftee Individual Page
 
   // Main container
   #masonry-container {
-    width: 960px;
-    margin: 0 auto;
-    clear: both;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    padding-top: 10px;
+    padding-top: 15px;
+    // width: 960px;
+    // margin: 0 auto;
+    // clear: both;
+    // -webkit-border-radius: 5px;
+    // -moz-border-radius: 5px;
+    // border-radius: 5px;
+    // padding-top: 10px;
 
     .box {
 
       // Remove margins and borders
       margin: 5 !important;
       padding: 0 0 0 0 !important;
-
-      img {
-        width: 240px;
-      }
-    }
-
-    // Different social media different size boxes
-    .news {
-      width: 240px;
-    }
-
-    .tweet {
-      width: 360px;
-    }
-
-    .insta {
-      width: 240px;
+      width: 300px;
+      float: left;
+      display: block;
     }
   }
 }
